--- a/src/Components/ClockCard/ClockCard.css
+++ b/src/Components/ClockCard/ClockCard.css
@@ -8,13 +8,15 @@
     margin: 10px;
     float: left;
   }
+
   .clock-card h1 {
-    font-size: 1.1em;
-    margin-bottom: 6px;
+    font-size: 1.2em;
+    margin: 6px 0;
   }
+
   .clock-card p {
     font-size: 1.1em;
-    margin-bottom: 10px;
+    margin: 6px 0;
     white-space: pre-wrap;
     word-wrap: break-word;
   }
