making cards animate from the center out

--- a/src/Components/ClockCard/ClockCard.css
+++ b/src/Components/ClockCard/ClockCard.css
@@ -1,8 +1,8 @@
 
 .clock-card {
     background: #ffb8111c;
-    border-radius: 7px;
-    box-shadow: 0 2px 5px #ccc;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px #ccc;
     padding: 10px;
     width: 150px;
     margin: 10px;
