--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -8,8 +8,7 @@
   color: #61dafb;
 }
 
-.mid{
-  overflow: auto; 
+.cards-wrapper{
   margin: 15px 5%;
   display: flex;
   justify-content: center;
