--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,9 @@ body {
   /*
   background-image: url("https://www.transparenttextures.com/patterns/triangles.png");
   background-image: url("https://www.transparenttextures.com/patterns/gplay.png");
-  */
   background-image:url("https://www.transparenttextures.com/patterns/transparent-square-tiles.png");
+  */
+  background-image:url("./Images/pngfind.com-starry-night-png-723840.png");
 }
 
 code {
