more color tweaks. making clocks wrapper display inline-box to always push footer text down

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  color: #DDD;
+  color: #EEE;
   
 }
 
@@ -9,8 +9,8 @@
 }
 
 .cards-wrapper{
+  display: inline-block;
   margin: 15px 5%;
-  display: flex;
   justify-content: center;
 }
 
