--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0531cd;
+  background-color: #002197;
   /*
   background-image: url("https://www.transparenttextures.com/patterns/triangles.png");
   background-image: url("https://www.transparenttextures.com/patterns/gplay.png");
   background-image:url("https://www.transparenttextures.com/patterns/transparent-square-tiles.png");
   */
-  background-image:url("./Images/pngfind.com-starry-night-png-723840.png");
+  background-repeat: no-repeat;
+  background-image: url("./Images/pngfind.com-starry-night-png-723840.png");
 }
 
 code {
