--- a/src/Components/ClockCard/ClockCard.css
+++ b/src/Components/ClockCard/ClockCard.css
@@ -4,7 +4,7 @@
     border-radius: 5px;
     box-shadow: 1px 1px 5px #ccc;
     padding: 10px;
-    width: 150px;
+    min-width: 150px;
     margin: 10px;
     float: left;
   }
