--- a/src/Components/ClockCard/ClockCard.css
+++ b/src/Components/ClockCard/ClockCard.css
@@ -1,22 +1,23 @@
 
 .clock-card {
-    background: #ffb8111c;
-    border-radius: 5px;
-    box-shadow: 1px 1px 5px #ccc;
-    padding: 10px;
-    min-width: 150px;
-    margin: 10px;
-    float: left;
-  }
+  background: #00219708;
+  border-radius: 5px;
+  box-shadow: 0px 0px 4px #ccc;
+  padding: 10px;
+  min-width: 150px;
+  margin: 10px;
+  float: left;
+  backdrop-filter: blur(5px);
+}
 
-  .clock-card h1 {
-    font-size: 1.2em;
-    margin: 6px 0;
-  }
+.clock-card h1 {
+  font-size: 1.2em;
+  margin: 6px 0;
+}
 
-  .clock-card p {
-    font-size: 1.1em;
-    margin: 6px 0;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-  }
+.clock-card p {
+  font-size: 1.1em;
+  margin: 6px 0;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
