--- a/src/Components/ClockCard/ClockCard.css
+++ b/src/Components/ClockCard/ClockCard.css
@@ -4,9 +4,8 @@
   border-radius: 5px;
   box-shadow: 0px 0px 4px #ccc;
   padding: 10px;
-  min-width: 150px;
+  width: 150px;
   margin: 10px;
-  float: left;
   backdrop-filter: blur(5px);
 }
 
